# practical-machine-learning-with-rust

./: Cargo.toml  README.md
plot/: Cargo.toml
rustymachine-regression/: Cargo.toml
rustymachine-regression/src/: main.rs
statistics/: Cargo.toml
statistics/src/: main.rs
supervised-learning/: Cargo.toml
working-with-data/: Cargo.toml
