[package]
name = "supervised-learning"
version = "0.1.0"
authors = ["James Hagans <jhagans@acm.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-machine = "0.5.4"
serde = "1.0"
serde_derive = "1.0"
rand = "0.7"
csv = "1.1"
tensorflow = { version = "0.15.0", features = ["tensorflow_unstable"] }
transpose = "0.2.0"